--- a/.github/workflows/docker-image.yml
+++ b/.github/workflows/docker-image.yml
@@ -1,27 +1,37 @@
-name: Build and Push Docker Image
+name: build_docker
 
 on:
   push:
-    branches:
-      - main
+    branches: [main]
+  release:
+    types: [created] # 表示在创建新的 Release 时触发
 
 jobs:
-  build:
+  build_docker:
+    name: Build docker
     runs-on: ubuntu-latest
-
-    env:
-      DOCKER_IMAGE_NAME: fushin/wbupowerapi
-      VERSION: ${{ github.event.head_commit.id }}
-
     steps:
-    - name: Checkout repository
-      uses: actions/checkout@v2
+      - name: Checkout
+        uses: actions/checkout@v3
 
-    - name: Login to Docker Hub
-      run: docker login -u ${{ secrets.DOCKER_LOGIN }} -p ${{ secrets.DOCKER_PASSWD }}
+      - name: Set up QEMU
+        uses: docker/setup-qemu-action@v2
+      - name: Set up Docker Buildx
+        uses: docker/setup-buildx-action@v2
+      - name: Login to DockerHub
+        uses: docker/login-action@v2
+        with:
+          username: ${{ secrets.DOCKER_LOGIN }}
+          password: ${{ secrets.DOCKER_PASSWD }}
 
-    - name: Build Docker image
-      run: docker build -t $DOCKER_IMAGE_NAME:$VERSION .
-
-    - name: Push Docker image
-      run: docker push $DOCKER_IMAGE_NAME:$VERSION
+      - name: Build and push
+        id: docker_build
+        uses: docker/build-push-action@v4
+        with:
+          context: .
+          file: ./Dockerfile
+          push: true
+          platforms: linux/amd64,linux/arm64
+          tags: |
+            fushin/wbupowerapi:${{ github.ref_name }}
+            fushin/wbupowerapi:latest
